# air-trust

./: .coverage  .coverage.claude.pid610.XgLe1oZx.HpNcgNU0dAeh  .gitignore  AIR_Blackbox_Client_Pitch_Framing.md  AIR_Blackbox_Content_Distribution_Pack.md  AIR_Blackbox_DevTo_Article.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DATA_GOVERNANCE.md  README.md  RISK_ASSESSMENT.md  ROADMAP-1.11.md  ROADMAP.md  SECURITY.md  architecture.mermaid  docker-compose.enterprise.yaml  docker-compose.yaml  evidence-bundle-2026-04-13T18-55-19.air-evidence  evidence-bundle-2026-04-13T18-55-36.air-evidence  evidence-bundle-2026-04-13T18-56-06.air-evidence  github-release-v1.12.md  guardrails.enterprise.yaml  guardrails.yaml  hn-post-v1.12.md  pyproject.toml
air-trust/: .gitignore  CHANGELOG.md  LICENSE  README.md  SPEC.md  pyproject.toml
air-trust/air_trust/: __init__.py  __main__.py  agent_identity.py  atf.py  chain.py  core.py  detection.py  events.py  keys.py  policy.py  scan.py
air-trust/air_trust/adapters/: __init__.py  callback.py  decorator.py  mcp.py  otel.py  proxy.py
air-trust/tests/: test_adapters.py  test_agent_identity.py  test_atf.py  test_badge.py  test_chain.py  test_cli.py  test_completeness.py  test_core.py  test_detection.py  test_events.py  test_handoff_stress.py  test_handoffs.py  test_identity.py  test_policy.py  test_scan.py
air_blackbox-1.10.0/: README.md  pyproject.toml
benchmarks/: benchmark_frameworks.py
collector/: collector-airgapped.yaml  collector-test.yaml  collector.yaml
demo/: a2a_multi_framework_demo.py  a2a_transaction_demo.py  a2a_verification_export_demo.py  co_attestation_demo.py
deploy/: README.md  docker-compose.full.yaml
docs/: 6-technical-checks.html  COMMERCIAL_ADDENDUM.md  article-12-compliance-layer.md  community-outreach-posts.md  privacy.html  release-announcement-v1.md
examples/: signed_handoff.py
scripts/: generate_training_data.py
sdk/: README.md
tests/: conftest.py  test_a2a_protocol.py  test_a2a_transaction.py  test_a2a_verify_export.py  test_agent_identity_binding.py  test_aibom_generator.py  test_attestation.py  test_bias_scanner.py  test_cli_commands.py  test_cli_smoke.py  test_code_scanner.py  test_compliance_engine.py  test_compliance_history.py  test_crewai_adapter.py  test_deep_scan.py  test_export_bundle.py  test_feedback.py  test_gateway_client.py  test_gdpr_scanner.py  test_hardware_determinism.py  test_init_module.py  test_precommit.py  test_replay.py  test_shadow_aibom.py  test_standards_map.py  test_transparency_scanner.py  test_trust_layer_adapters.py  test_trust_layers.py  test_validate_engine.py
training/: RUN_FINETUNE.md  augment_full_coverage.py  augment_moat2.py  finetune.py  generate_advanced.py  generate_agent_scanning.py  generate_data.py  generate_full_coverage.py  generate_moat.py  generate_moat2.py  generate_pass_scaled.py  (+5 more)
(+101 files in other folders)
